weakheat-demo/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weakheat-api
  labels:
    app: weakheat-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weakheat-api
  template:
    metadata:
      labels:
        app: weakheat-api
    spec:
      serviceAccountName: weakheat-api
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: api
          image: cerit.io/kovacoj1/weakheat-api:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "2"
              memory: "2Gi"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
