weakheat-demo/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weakheat-api-svc
spec:
  selector:
    app: weakheat-api
  ports:
    - port: 80
      targetPort: 8000
